# lf-nodes

./: .gitignore  LICENSE  README.md  __init__.py  check_send_sync.py  count.json  package.json  pyproject.toml  requirements-workflow-runner.txt  requirements.txt  tsconfig.json  vite.config.js  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: nodes-count.yaml  publish.yml
docs/: AGENTS.md  ARCHITECTURE.md  CLIENT.md  FRONTEND_PROXY.md  IMAGE_EDITOR.md  NODE_TEMPLATE.md  PROXY.md  WORKFLOW_RUNNER.md
example_workflows/: Caption dataset (WD14).json  Compare images.json  Flux + LLM Character manager.json  Image 2 Image (diffusion model and LLM chat).json  Image 2 Image (with ControlNet, editing breakpoint and WD14 tagger).json  Image 2 SVG.json  ImageToSVG.json  LoRa tester.json  Markdown documentation.json  Multiple image resize for web + blurred placeholder.json  Multiple prompt from JSON.json  Resize image for training.json  SVG Generation (Gemini).json  Simple inpaint.json  Sort captions.json  Workshop (FLUX Kontext).json
modules/: __init__.py
modules/api/: analytics.py  backup.py  image.py  json.py  metadata.py  models.py  preview.py  refresh.py  system.py  workflow_runner.py
modules/nodes/: analytics.py  configuration.py  filters.py  image.py  io.py  json.py  llm.py  logic.py  primitives.py  seeds.py  selector.py
modules/nodes/analytics/: __init__.py  caption_image_wd14.py  color_analysis.py  image_histogram.py  keyword_counter.py  lut_generation copy.py  lut_generation.py  update_usage_statistics.py  (+1 more)
modules/tests/: common_mocks.py  conftest.py  run_all_helper_tests.py  run_all_tests.py
modules/utils/: constants.py  detection.py  detection_helpers.py  env.py  filters.py  helpers.py  image_editing.py  regions.py
modules/workflow_runner/: __init__.py  api_constants.py  assets.py  auth.py  config.py  frontend_proxy.py  google_oauth.py  handlers.py  helpers.py  job_manager.py  proxy.py  registry.py  routes.py
modules/workflows/: __init__.py  registry.py
web/deploy/: submit-prompt.html
web/deploy_workflow_app/: submit-prompt.html
web/src/: index.ts  shims.d.ts
web/workflow-runner/: tsconfig.json
(+2045 files in other folders)
